# src/Routes/Auth.route.js
@@ -3,107 +3,10 @@ const router = express.Router()
 const AuthController = require('../Controllers/Auth.Controller')
 
 
-/**
- * @swagger
- * components:
- *   schemas:
- *     User:
- *       type: object
- *       required:
- *         - email
- *         - password
- *       properties:
- *         email:
- *           type: string
- *           description: The user email
- *         password:
- *           type: string
- *           description: The user password
- *       example:
- *         email: johndoe@gmail.com
- *         password: password
- */
-
- /**
-  * @swagger
-  * tags:
-  *   name: Users
-  *   description: Users of the Volcanoe API
-  */
-
-/**
- * @swagger
- * /auth/register:
- *   post:
- *     summary: Create a new user
- *     tags: [Users]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             $ref: '#/components/schemas/User'
- *     responses:
- *       200:
- *         description: The user was created successfully
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/User'
- *       500:
- *         description: Some server error
- */
 router.post('/register', AuthController.register)
 
-
-
-/**
- * @swagger
- * /auth/login:
- *   post:
- *     summary: Login a user
- *     tags: [Users]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             $ref: '#/components/schemas/User'
- *     responses:
- *       200:
- *         description: User login successful
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/User'
- *       500:
- *         description: Some server error
- */
 router.post('/login', AuthController.login)
 
-
-/**
- * @swagger
- * /auth/logout:
- *   delete:
- *     summary: Delete a user
- *     tags: [Users]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             $ref: '#/components/schemas/User'
- *     responses:
- *       200:
- *         description: The user was deleted successfully
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/User'
- *       500:
- *         description: Some server error
- */
 router.delete('/logout', AuthController.logout)
 
 module.exports = router
